thumbnail update and overflow css fix,

--- a/gamesPlatform/Client/wwwroot/css/app.css
+++ b/gamesPlatform/Client/wwwroot/css/app.css
@@ -5,7 +5,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
-    overflow: hidden;
     background-color: var(--color-light-background-lsat);
 }
 
